src/services_demo/deployment-rf-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment-randomforest
  labels:
    app: dep-randomforest-redis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dep-randomforest-redis
  template:
    metadata:
      labels:
        app: dep-randomforest-redis
    spec:
      containers:
        - name: rf-with-redis
          image: aishpra/rf-redis:clusteripdemo2
          ports:
          - containerPort: 5000
