src/services_demo/clusterip-rf-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip
spec:
  type: ClusterIP 
  selector:
    app: redis-rf
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: rf-redis-clusterip
spec:
  type: ClusterIP 
  selector:
    app: dep-randomforest-redis
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: rf-clusterip
spec:
  type: ClusterIP 
  selector:
    app: dep-randomforest
  ports:
    - port: 5000
      targetPort: 5000
