src/services_demo/rf-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: rf-node-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 5000
      nodePort: 31515
  selector:
    app: dep-randomforest
    # app: dep-randomforest-redis
