src/services_demo/rf-redis-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: rf-redis-node-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 5000
      nodePort: 31516
  selector:
    app: dep-randomforest-redis

---

# apiVersion: v1
# kind: Service
# metadata:
#   name: redis-nodeport
# spec:
#   type: NodePort
#   ports:
#     - port: 6379
#       targetPort: 6379
#       nodePort: 31516
#   selector:
#     svc: redis-clusterip
